[package]
name = "cypress_parallel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
serde_json = "1.0.88"
convert_case = "0.6.0"
tokio = {version="1.23.0", features=["full"] }
regex = "1.7.0"
once_cell = "1.5.2"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
